--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
     "route": "^0.2.5",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
